Update bevis.tex, ekstrema.tex, and 14 more files...

--- a/fig/tikz/geometri/bevis.tex
+++ b/fig/tikz/geometri/bevis.tex
@@ -67,8 +67,8 @@
 %
 %
 \end{tikzpicture}
-  \captionof{figure}{Polyeder $\mathcal{P}$ og $Q$, hvor $\textbf{x}$ er et kritisk punkt i $Q$, da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$, sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda) \mathbf{z}$.
-Vektor $\textbf{w}$ er i modsætning ikke et kritisk punkt i $Q$, da der findes $\textbf{v}$ og $\textbf{u}$, sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda) \mathbf{u}$.}
+  \captionof{figure}{Polyederene $\mathcal{P}$ og $Q$, hvor $\textbf{x}$ er et ekstremumspunkt i $Q$, da der ikke findes vektorer $\textbf{y}$ og $\textbf{z}$, sådan at $\mathbf{x}=\lambda\mathbf{y}+(1-\lambda) \mathbf{z}$.
+Vektor $\textbf{w}$ er derimod ikke et ekstremumspunkt i $Q$, da der findes $\textbf{v}$ og $\textbf{u}$, sådan at $\mathbf{w}=\lambda\mathbf{v}+(1-\lambda) \mathbf{u}$.}
   \label{fig:julieerAMAZING}
 \end{center}
 %
