--- a/incl/main/appendicer/apend_b.tex
+++ b/incl/main/appendicer/apend_b.tex
@@ -1,15 +1,15 @@
-\chapter{Bliver slettet lige om lidt}
-%
-Egenskaber for lineært afhængige og uafhængige mængder.
-%
-\begin{thm}{}{egenskab_lin}
-\begin{enumerate}
-\item En mængde bestående af én ikke-nulvektor er lineært uafhængig, men $\{\textbf{0}\}$ er lineært afhængig.
-\item Ethvert underrum af $\R^n$, der indeholder mere end $n$ vektorer, er lineært afhængigt.
-\item Hvis spannet af $\S$ er et underrum af $\R^n$, og ingen vektorer kan fjernes uden at ændre spannet, så er $\S$ lineært uafhængig.
-\end{enumerate}
-\end{thm}
-%
+%\chapter{Bliver slettet lige om lidt}
+%%
+%Egenskaber for lineært afhængige og uafhængige mængder.
+%%
+%\begin{thm}{}{egenskab_lin}
+%\begin{enumerate}
+%\item En mængde bestående af én ikke-nulvektor er lineært uafhængig, men $\{\textbf{0}\}$ er lineært afhængig.
+%\item Ethvert underrum af $\R^n$, der indeholder mere end $n$ vektorer, er lineært afhængigt.
+%\item Hvis spannet af $\S$ er et underrum af $\R^n$, og ingen vektorer kan fjernes uden at ændre spannet, så er $\S$ lineært uafhængig.
+%\end{enumerate}
+%\end{thm}
+%%
 \chapter{Span og dimension}
 %
 \ref{thm:spandim}, der omhandler spannet og dimensionen, er vigtig i forhold til visse egenskaber nævnt i rapporten.
