--- a/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
+++ b/incl/main/grafisk_losning/Hyperplan_halvrum_polyeder.tex
@@ -32,13 +32,13 @@ $
 %
 \textit{Randen} er begrænsningerne, som afgrænser polyederet fra resten af rummet. 
 Dermed er randen på figur \ref{fig:nej2} linjerne, der afgrænser $\mathcal{P}$ fra resten af $\R^2$.
-Randen på figur \ref{fig:nej3} er derimod udsnittet af fladerne, som udgør kuben, der afgrænser $\mathcal{P}$ fra resten af $\R^3$.
+Randen på figur \ref{fig:nej3} er derimod udsnittet af fladerne, som udgør terningen, der afgrænser $\mathcal{P}$ fra resten af $\R^3$.
 \\\\
 %
 Det gælder endvidere for polyedre, at de enten kan være \textit{begrænsede} eller \textit{ubegrænsede}.
 %
 \begin{defn}{}{}
-En mængde $S \subset \R^n$ er \textbf{begrænset}, såfremt der eksisterer en konstant $c$, således den absolutte værdi af alle komponenter i alle elementer i $S$ er mindre eller lig $c$. 
+En mængde $\S \subset \R^n$ er \textbf{begrænset}, såfremt der eksisterer en konstant $c$, således den absolutte værdi af alle komponenter i alle elementer i $\S$ er mindre eller lig $c$. 
 Såfremt en sådan konstant ikke eksisterer, er mængden \textbf{ubegrænset}.
 \end{defn}
 \noindent
