--- a/incl/main/grafisk_losning/degenerering.tex
+++ b/incl/main/grafisk_losning/degenerering.tex
@@ -11,7 +11,7 @@ En basal løsning $\mathbf{v} \in \R^n$ kaldes \textbf{degenereret}, hvis der er
 En degenereret basal løsning har altså flere end de nødvendige $n$ aktive betingelser.
 % 
 I $\R^2$ findes en degenereret løsning i et skæringspunkt mellem tre eller flere linjer. 
-Til sammenligning findes en degenereret løsning i $\R^3$ i et skæringspunkt mellem fire eller flere flader. 
+Til sammenligning findes en degenereret løsning i $\R^3$ i et skæringspunkt mellem fire eller flere planer. 
 På figur \ref{fig:mmmm2} ses $\mathbf{v}$, som er en degenereret basal løsning i $\R^2$, og på figur  \ref{fig:mmmm3} ses $\mathbf{v}$, som er en degenereret basal løsning i $\R^3$.
 Generelt vil en degenereret løsning opstå i skæringspunktet med mindst $n+1$ hyperplaner i $\R^n$.
 %
@@ -36,7 +36,7 @@ Dermed skal et polyeder på standardform have flere end $m-n$ ikke-negativitetsb
 %
 \begin{defn}{}{degenenene}
 Lad $\mathcal{P}$ være et polyeder på standardform
-$P=\{ \mathbf{x} \in \R^n \mid A \mathbf{x}=\mathbf{b},x \geq 0 \}$, og lad $m$ være antallet af rækker i $A$.
+$\mathcal{P}=\{ \mathbf{x} \in \R^n \mid A \mathbf{x}=\mathbf{b},x \geq 0 \}$, og lad $m$ være antallet af rækker i $A$.
 En basal løsning $\mathbf{v}$ for $\mathcal{P}$ kaldes degenereret, hvis der er flere end $n-m$ af komponenterne i $\mathbf{v}$, der er lig $0$.
 \end{defn}
 %
