--- a/incl/main/linear_optimeringsproblemer/generalt.tex
+++ b/incl/main/linear_optimeringsproblemer/generalt.tex
@@ -2,7 +2,7 @@
 %
 I lineær programmering er målet at optimere en lineær funktion afgrænset af \textit{lineære betingelser}.
 Dette kapitel tager udgangspunkt i \citep[side 2-6, 21-24 og 139-146]{bert}, hvis ikke andet er angivet.
-Funktionen $z$, som optimeres, kaldes \textit{objektfunktionen}.
+Funktionen, som optimeres, kaldes \textit{objektfunktionen}.
 Objektfunktionen kan enten maksimeres eller minimeres, og er begrænset af de lineære betingelser.
 Findes henholdsvis et maksimum eller minimum inden for begrænsningerne, er dette problemets \textit{optimale værdi}.
 \\\\
