--- a/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
+++ b/incl/main/linear_optimeringsproblemer/grafisk_losning.tex
@@ -32,7 +32,7 @@ På figur \ref{fig:julieerikkedum} kan løsningsmængden, markeret med blå, for
 %
 % For at finde den optimale løsning findes enhver given skalar $k$ og løsningsmængden med alle punkter overvejes, hvor objektfunktionen $\textbf{c}^T\textbf{x}$ er lig med $k$. 
 %
-Ethvert punkt i løsningsmængden, hvor objektfunktionen $\textbf{c}^T\textbf{x}$ er lig med $k$, undersøges for at finde den optimale løsning.
+Ethvert punkt i løsningsmængden, hvor objektfunktionen $\textbf{c}^T\textbf{x}$ er lig med $k$, undersøges for om disse er den optimale løsning.
 Dette illustreres ved en linje, der er beskrevet af ligningen $x_1+x_2=k$ for maksimumsproblemet i \ref{eks:min_loes}. 
 Dette betyder, at den optimale løsning, som enten maksimerer eller minimerer omkostningen kan findes grafisk ved at indtegne niveaukurver $f(x_1, x_2)=k$, og forskyde disse niveaukurver i den retning, der optimerer omkostningen, indtil den optimale løsning opnås.  
 Med udgangspunkt i \ref{eks:min_loes}, er denne linje vinkelret på vektoren 
