--- a/incl/main/simplex_metoden/simplex_metoden.tex
+++ b/incl/main/simplex_metoden/simplex_metoden.tex
@@ -5,6 +5,12 @@ Som vist i afsnit \ref{klogskab}, findes der en optimal løsning til et lineært
 \textit{Simplexmetoden} benytter sig af denne egenskab og søger at finde den optimale løsning.
 Dette kapitel tager udgangspunkt i \citep[side 25-34]{lay} og \citep[side 82-87 og 94-100]{bert}, hvis ikke andet er angivet.
 Bemærk, at afsnit \ref{afsnittet} tager afsæt i et maksimumsproblem, imens øvrige afsnit tager udgangspunkt i minimumsproblemer.
+Afsnittet indledes med et eksempel på brug af simplexmetoden.
+Herefter beskrives hvordan den er udviklet og forskellige implementeringer.
+% Eksempel til simplexmetoden
+% ---------------------------------------------------------
+	\input{incl/main/simplex_metoden/simplex_metoden_eksempel}
+%	
 %
 % Geometrisk tilgang til simplexmetoden
 % ---------------------------------------------------------
@@ -15,11 +21,6 @@ Bemærk, at afsnit \ref{afsnittet} tager afsæt i et maksimumsproblem, imens øv
 % ---------------------------------------------------------
 	\input{incl/main/simplex_metoden/konstruktion_metod}
 %	
-%		
-% Eksempel til simplexmetoden
-% ---------------------------------------------------------
-	\input{incl/main/simplex_metoden/simplex_metoden_eksempel}
-%
 %
 % Typer af simplexmetoden
 % ---------------------------------------------------------
