--- a/fig/tikz/geometri/hjorne.tex
+++ b/fig/tikz/geometri/hjorne.tex
@@ -27,9 +27,9 @@
 %	
 % Punkter og tilhørende tekst
 % -------------------------------------------------------
-	\filldraw [black] (5,2) circle (0pt) node[right] {$ \{ \mathbf{y} \mid \mathbf{c}^T \mathbf{y} = \mathbf{c}^T \mathbf{x} \}$};
+	\filldraw [black] (5,2) circle (0pt) node[right] {$ \{ \mathbf{y} \mid \mathbf{c}_\textbf{w}^T \mathbf{y} = \mathbf{c}_\textbf{w}^T \mathbf{x} \}$};
 	\filldraw [black] (x) circle (2pt) node[above] {$\mathbf{x}$};
-	\filldraw [black] (-3,3.8) circle (0pt) node[left] {$ \{ \mathbf{y} \mid \mathbf{c}^T \mathbf{y} = \mathbf{c}^T \mathbf{w} \}$};
+	\filldraw [black] (-3,3.8) circle (0pt) node[left] {$ \{ \mathbf{y} \mid \mathbf{c}_\textbf{x}^T \mathbf{y} = \mathbf{c}_\textbf{x}^T \mathbf{w} \}$};
 	\filldraw [black] (w) circle (2pt) node[left] {$\mathbf{w}$};
 %
 % Streger mellem punkterne 
@@ -44,7 +44,7 @@
 %
   \end{tikzpicture}
   \caption{Et polyeder $\mathcal{P}$, hvor $\textbf{x}$ er et hjørnepunkt, da det er det eneste punkt, som både er i hyperplanet og $\mathcal{P}$.
-Vektoren $\textbf{w}$ er i modsætning ikke et hjørnepunkt, da hyperplanet skærer $\mathcal{P}$ i flere punkter end $\mathbf{w}$.}
+Vektoren $\textbf{w}$ er derimod ikke et hjørnepunkt, da hyperplanet skærer $\mathcal{P}$ i flere punkter end $\mathbf{w}$.}
   \label{fig:julieermegaseeeeeeeeeej}
 \end{figure}
 %
