--- a/incl/main/simplex_metoden/konstruktion_metod.tex
+++ b/incl/main/simplex_metoden/konstruktion_metod.tex
@@ -1,10 +1,5 @@
-\section{Kontruktionen af Simplex-metoden}
-%
-\textcolor{red}{
-%Simplexmetoden afsøger dermed hjørnerne på denne vis, hvis de ikke er degenererede basale mulige løsninger.
-%Dermed vil en optimal basismatrix sikre en løsning indenfor løsningsmængden. % er lidt i tvivl om denne sætning er helt rigtigt.
-%bla bla 
-Afsnit \ref{julieerfantalastiskogvidunderlig} belyser, at simplexmetoden finder basale retninger, som reducerer omkostningerne i objektfunktionen. 
+\noindent
+Simplexmetoden finder basale retninger, som reducerer omkostningerne i objektfunktionen. 
 Med optimale betingelser undersøges nu, hvilken mulig retning, der skal vælges. 
 Omkostningsvektoren $\mathbf{c}^*$ udregnes for en given basal mulig løsning. 
 Hvis ingen basale retninger kan reducere omkostningen, er løsningen optimal. 
@@ -26,7 +21,6 @@ Herefter beregnes omkostningsvektoren for den nye mulige løsning, og samme proc
 %\begin{align*}
 %\theta^*
 %\end{align*}
-}
 %
 %
 %	\input{incl/main/simplex_metoden/thm_3.1}
